SP2/terraform/instances.tf
resource "aws_instance" "webservers" {
  count           = length(var.subnets_cidr)
  ami             = var.webservers_ami
  instance_type   = var.instance_type
  key_name        = aws_key_pair.generated_key.key_name
  security_groups = ["${aws_security_group.webservers.id}"]
  subnet_id       = element(aws_subnet.public.*.id, count.index)
  user_data       = file("webserver.sh")

  tags = {
    "Name" = "SocialMedia-${count.index}"
  }
}
